--- a/PersonalAssistant/MainMenu.resx
+++ b/PersonalAssistant/MainMenu.resx
@@ -245,7 +245,7 @@
   <data name="button12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOeSURBVHhe7ds7
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOeSURBVHhe7ds7
         aFRBFAbgmwekEWKfIhAwRLARBEkhAasICrG0shAsjPjAQrBTLLTRpNAiIJjGIoWlJGJjuhQWIogWCiJa
         WAgqiuJj/f/LTDg597+P7S47d+CD5N85Z2cmj9292WS9Xi9pMkyJDC2MYdilbmszrplrV7dZMowwFuAt
         fIPrak4bca1hzVz7gpoTyZAw+JVnA34S7VVz24RrNOsl7qH0O0GGhDEdGljn1Nw24RrNeqNpNZdkSBgz
@@ -281,4 +281,10 @@
         oAJJAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="tmrNews.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="imageListNews.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 17</value>
+  </metadata>
 </root>
