--- a/EmailClient/EmailAccount.resx
+++ b/EmailClient/EmailAccount.resx
@@ -1,4 +1,64 @@
-﻿<root>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!--
+    Microsoft ResX Schema 
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -57,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAPySURBVFhHvdb7
+        T1t1GMfxEzXZFnHZGGXcqUC5BGEOtzC5bDWMEf+AyfYbTBLnJqKZKA5ESAYYhiQzc+PSEXGbMDBDJjfn
+        LYhcnP62LDH+CD8YwMQYiwMWefv08F0p5ZS2sPhJXjmH5zzf70NPWziarwmcYPvOMY7vGKVV3Nk5yoxY
+        VGZUrUUcC/qRp9SyzSdohPhdw1wRcwIfzQWOYDMNY1Hb+J+IMbYFfUtD0Hc8EGzQoqg3f89Wta1vMd3G
+        Evw1dwWPyHjQEKFq+/UTNsDekCFmBB7Mhw5xffcgLwd/RW7oIHkhgxRIvU3YXfrcTQUPkqrGGCfiSyxh
+        fcwIPPg5coBY1b4mIQOYwvrpC+0HD6ZM/YSo9tWJ6GJb+BfcDe8FIxG3+MXcww7V7jldPB7Wy9CaPW45
+        jccNsEV1rySyh4bIm+DB/bAuolTrSmSYVsVj6idn5MWEy5p/3PZwirpJtWpdTkwn8dHdPBB40Kha9Zi6
+        CDB3c0Pq8+J+1Od0JvSu/u5LvUOtNfK3ucvlrTB3cOXpDnBn7lRuMOj4JVW7Ft3BVee1hzqoVZf1SK1k
+        Tc9ql/TGuGtsj7nGnMCLf0Vf7FXek+OSS33ZdQb0DVViPqNQao66J/ZkuZOa5ROOx7XDI1CnZuuRfSsM
+        elZ8CrHt5GvxbbQKNunXxHZ2qdl6pPaDa4/FWLOW0ModwSZMJdmIVnP1JNjIlPqSW98aiTYmtKTLzAp8
+        0rTG7/HNJKq5epJtBEr9N7c+Q4lNTGvJF1kQbMB80kXS1Fw9qed5Uupj+vWPfTKvpVxgQbABq/42xH3E
+        lmcucFvgh3kttZFZgb/2NJClZutJaaTOqM+Lae3Zen4S6M77bm8tJjVbj9Tuufd4s6eecS3tA1rS6sBP
+        S9YqnlCz9cg+fwj81KTtq+HYvnPgzXPuauiRerODnHevue6qxoNzHNWSqwjYX41d8D+zO2brt+9AJbb0
+        SvDTbPr7NMuxTfzlUvdViz7ckfQKLM+fZVGwSrmxjHIm08+yWy3XMiqIlfqf7n2eHChnYX8ZMWr5cjLf
+        pj7jHdncB5lllKplzkj9w4wyue6DzHdX/+PSI5/qrVmljGe9Bd5knuGkWuZM9hkqjXoNjL5YbPBI5kj2
+        G4QefJMpwXqkb8T1UcyxodTvufcZmLSWengofZicElKtrzMl8OKbQyUctZaQL+fjrtcOGSlm8uBrpKgx
+        6ye7GNMLpxgWOJ3eOOtpxqynvLxy9zhua84rVAu7wC8nnRZyXqXW43vuS6wFhBwp4lJuEXaBj+yHi2g+
+        fMLtq7aZyC0MOFJIvmjKK2RCjtNiQXGcT+QWcDnvBC85etUyL9G0/wATl/bf3YtqLwAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
