--- a/Forms Appointments/Calendar.resx
+++ b/Forms Appointments/Calendar.resx
@@ -126,4 +126,29 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>154, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAPySURBVFhHvdb7
+        T1t1GMfxEzXZFnHZGGXcqUC5BGEOtzC5bDWMEf+AyfYbTBLnJqKZKA5ESAYYhiQzc+PSEXGbMDBDJjfn
+        LYhcnP62LDH+CD8YwMQYiwMWefv08F0p5ZS2sPhJXjmH5zzf70NPWziarwmcYPvOMY7vGKVV3Nk5yoxY
+        VGZUrUUcC/qRp9SyzSdohPhdw1wRcwIfzQWOYDMNY1Hb+J+IMbYFfUtD0Hc8EGzQoqg3f89Wta1vMd3G
+        Evw1dwWPyHjQEKFq+/UTNsDekCFmBB7Mhw5xffcgLwd/RW7oIHkhgxRIvU3YXfrcTQUPkqrGGCfiSyxh
+        fcwIPPg5coBY1b4mIQOYwvrpC+0HD6ZM/YSo9tWJ6GJb+BfcDe8FIxG3+MXcww7V7jldPB7Wy9CaPW45
+        jccNsEV1rySyh4bIm+DB/bAuolTrSmSYVsVj6idn5MWEy5p/3PZwirpJtWpdTkwn8dHdPBB40Kha9Zi6
+        CDB3c0Pq8+J+1Od0JvSu/u5LvUOtNfK3ucvlrTB3cOXpDnBn7lRuMOj4JVW7Ft3BVee1hzqoVZf1SK1k
+        Tc9ql/TGuGtsj7nGnMCLf0Vf7FXek+OSS33ZdQb0DVViPqNQao66J/ZkuZOa5ROOx7XDI1CnZuuRfSsM
+        elZ8CrHt5GvxbbQKNunXxHZ2qdl6pPaDa4/FWLOW0ModwSZMJdmIVnP1JNjIlPqSW98aiTYmtKTLzAp8
+        0rTG7/HNJKq5epJtBEr9N7c+Q4lNTGvJF1kQbMB80kXS1Fw9qed5Uupj+vWPfTKvpVxgQbABq/42xH3E
+        lmcucFvgh3kttZFZgb/2NJClZutJaaTOqM+Lae3Zen4S6M77bm8tJjVbj9Tuufd4s6eecS3tA1rS6sBP
+        S9YqnlCz9cg+fwj81KTtq+HYvnPgzXPuauiRerODnHevue6qxoNzHNWSqwjYX41d8D+zO2brt+9AJbb0
+        SvDTbPr7NMuxTfzlUvdViz7ckfQKLM+fZVGwSrmxjHIm08+yWy3XMiqIlfqf7n2eHChnYX8ZMWr5cjLf
+        pj7jHdncB5lllKplzkj9w4wyue6DzHdX/+PSI5/qrVmljGe9Bd5knuGkWuZM9hkqjXoNjL5YbPBI5kj2
+        G4QefJMpwXqkb8T1UcyxodTvufcZmLSWengofZicElKtrzMl8OKbQyUctZaQL+fjrtcOGSlm8uBrpKgx
+        6ye7GNMLpxgWOJ3eOOtpxqynvLxy9zhua84rVAu7wC8nnRZyXqXW43vuS6wFhBwp4lJuEXaBj+yHi2g+
+        fMLtq7aZyC0MOFJIvmjKK2RCjtNiQXGcT+QWcDnvBC85etUyL9G0/wATl/bf3YtqLwAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
