--- a/Smart_Home/Properties/Resources.resx
+++ b/Smart_Home/Properties/Resources.resx
@@ -118,37 +118,46 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SmartHomeUpView" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SmartHomeUpView.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SmartHomeUpViewfinal1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SmartHomeUpViewfinal1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SmartHomeUpViewfinal2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SmartHomeUpViewfinal2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="plus40x40" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\plus40x40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Opened_light62x52" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Opened_light62x52.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Closed_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Closed_light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Opened_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Opened_light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TempRing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TempRing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SmartHomeUpViewfinal2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SmartHomeUpViewfinal2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SmartHomeUpView" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SmartHomeUpView.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plus40x40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plus40x40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hoop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SmartHomeUpViewfinal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SmartHomeUpViewfinal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SmartHomeUpViewfinal1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SmartHomeUpViewfinal1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Random House Picture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Random House Picture.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hoop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hoop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Closed_light62x52" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Closed_light62x52.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
